--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                   <div class="imageee">
-                    <img width="250px" class="ml-4 position-absolute top-0px"   src="https://i.postimg.cc/PNsnJG7M/hero-img.webp" alt="">
+                    <img width="250px" class="ml-4 position-absolute top-0px"   src="https://i.postimg.cc/PJvfC5RM/hero-img.webp" alt="">
                   </div>
                 
                 </div>
@@ -106,7 +106,7 @@
                   <div class="col-md-5 col-sm-12">
                     
               <figure>
-                <img width="400px" class="mt-4 shadow-sm" src="https://i.postimg.cc/XqJD7L3x/about-img.webp" alt="">
+                <img width="400px" class="mt-4 shadow-sm" src="https://i.postimg.cc/FH4cXMY6/about-img.webp" alt="">
   
              </figure>
   
@@ -272,7 +272,7 @@
                     <div class="card shadow-lg">
                       <div class="card-title text-center">
                         <figure class="p-2">
-                          <img width="80px" class="images" src="https://i.postimg.cc/cCSz3b2c/face1.jpg" alt="">
+                          <img width="80px" class="images" src="https://i.postimg.cc/pdgRgHTh/face1.jpg" alt="">
                         </figure>
                         <br>
                         <h4 class="mt-2">Jason Deo</h4>
@@ -289,7 +289,7 @@
                 <div class="card shadow-lg">
                   <div class="card-title text-center">
                     <figure class="p-2">
-                      <img width="80px" class="images" src="https://i.postimg.cc/cCSz3b2c/face1.jpg" alt="">
+                      <img width="80px" class="images" src="https://i.postimg.cc/pdgRgHTh/face1.jpg" alt="">
                     </figure>
                     <br>
                     <h4 class="mt-2">Jason Deo</h4>
@@ -306,7 +306,7 @@
             <div class="card shadow-lg">
               <div class="card-title text-center">
                 <figure class="p-2">
-                  <img width="80px" class="images" src="https://i.postimg.cc/cCSz3b2c/face1.jpg" alt="">
+                  <img width="80px" class="images" src="https://i.postimg.cc/pdgRgHTh/face1.jpg" alt="">
                 </figure>
                 <br>
                 <h4 class="mt-2">Jason Deo</h4>
@@ -323,7 +323,7 @@
         <div class="card shadow-lg">
           <div class="card-title text-center">
             <figure class="p-2">
-              <img width="80px" class="images" src="https://i.postimg.cc/cCSz3b2c/face1.jpg" alt="">
+              <img width="80px" class="images" src="https://i.postimg.cc/pdgRgHTh/face1.jpg" alt="">
             </figure>
             <br>
             <h4 class="mt-2">Jason Deo</h4>
