--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </button>
  
 
-          <img width="60px" src="https://i.postimg.cc/ncRc2NB3/logo.jpg" alt="">
+          <img width="60px" src="https://i.postimg.cc/LsV3WHvv/logo.jpg" alt="">
           <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
